<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">swangame</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="stopbutton">STOP</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="ipAddress">IP ADDRESS OF SERVER</string>
    <string name="port">PORT</string>
    <string name="connect">CONNECT</string>
    <string name="nickname">NICKNAME</string>
    <string name="defaultNickname">blinky</string>  
    <string name="startGame">Start Game</string>  
    <string name="instructions">Press the buttons in the order you see on the screen!</string>
	<string name="history">HISTORY</string>
	<string name="clear">Clear History</string>
	<string name="submit">Submit</string>
	<string name="playPatterns">Play Patterns!</string>
	<string name="playChatroom">Play Chatroom!</string>
	<string name="waiting">Waiting for Host to start the game…</string>
</resources>
